bugfix: username added

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ H2_CONSOLE_PATH=/h2-console
 # ===========================================
 # JWT CONFIGURATION
 # ===========================================
-JWT_SECRET=
+JWT_SECRET=CodeCrafters2024SecretKeyForJWTTokensVerySecureAndLong!@#$%
 JWT_EXPIRATION_MS=86400000
 # 86400000 ms = 24 horas
 
