--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,46 @@
+# ===========================================
+# APPLICATION
+# ===========================================
 spring.application.name=code_crafters
+server.port=${SERVER_PORT:8080}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:codehappen
+# ===========================================
+# DATABASE CONFIGURATION (H2 - Development)
+# ===========================================
+spring.datasource.url=${DB_URL:jdbc:h2:mem:codehappen}
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:}
+spring.datasource.driver-class-name=org.h2.Driver
+
+# H2 Console
+spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
+spring.h2.console.path=${H2_CONSOLE_PATH:/h2-console}
+
+# ===========================================
+# JPA/HIBERNATE
+# ===========================================
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===========================================
+# JWT CONFIGURATION
+# ===========================================
+jwt.secret=${JWT_SECRET:mySecretKeyForCodeCraftersApplicationSuperSecure123456789}
+jwt.expiration=${JWT_EXPIRATION_MS:86400000}
+
+# ===========================================
+# LOGGING
+# ===========================================
+logging.level.root=${LOG_LEVEL:INFO}
+logging.level.com.code_crafters.app=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# ===========================================
+# FILE UPLOAD
+# ===========================================
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
+upload.dir=${UPLOAD_DIR:./uploads}
