feat(security):complete implementation of JWT authentication and Spring Security configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,12 +24,24 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+
+# ===========================================
+# SQL INITIALIZATION
+# ===========================================
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=false
 
 # ===========================================
 # JWT CONFIGURATION
 # ===========================================
-jwt.secret=${JWT_SECRET:mySecretKeyForCodeCraftersApplicationSuperSecure123456789}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION_MS:86400000}
+
+# ===========================================
+# CORS CONFIGURATION
+# ===========================================
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
 
 # ===========================================
 # LOGGING
@@ -37,10 +49,21 @@ jwt.expiration=${JWT_EXPIRATION_MS:86400000}
 logging.level.root=${LOG_LEVEL:INFO}
 logging.level.com.code_crafters.app=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ===========================================
 # FILE UPLOAD
 # ===========================================
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:10MB}
 upload.dir=${UPLOAD_DIR:./uploads}
+
+# ===========================================
+# ERROR HANDLING
+# ===========================================
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
