--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.sql.init.continue-on-error=false
 # JWT CONFIGURATION
 # ===========================================
 jwt.secret=MySuperSecretKeyForJwtToken123456
-jwt.expirationMs=86400000
+jwt.expiration=86400000
 
 # ===========================================
 # CORS CONFIGURATION
